backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ratndeep/delivery_app_backend:latest
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: backend-secret-volume 
          mountPath: "/home/ubuntu/"  
          readOnly: true
        - secretRef:
            name: backend-secret

    volumes:
      - name: backend-secret-volume
        secret:
          secretName: backend-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
