ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "backend"
spec:
  defaultBackend:
    service:
      name: frontend 
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8888
